fix inflation-vector box on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -10002,7 +10002,7 @@ nav .modal-link:hover {
   }
 
   #inflation-vector-result-container {
-    width: 30%;
+    width: 35%;
     padding: 1rem;
     text-align: center;
   }
