--- a/scss/_media_breakpoints.scss
+++ b/scss/_media_breakpoints.scss
@@ -32,7 +32,7 @@ $small-content-height:420px;
     }
 
     #inflation-vector-result-container {
-        width: 30%;
+        width: 35%;
         padding: 1rem;
         text-align: center;
     }
